prov/verbs: Implement verbs on Windows
Implement the verbs provider on Windows using an Infiniband Verbs to
NetworkDirect translation layer.

On-behalf-of: @cmru-ps <dshinaberry@mru.medical.canon>
Signed-off-by: Derek Shinaberry <dshinaberry@mru.medical.canon>

--- a/libfabric.vcxproj.filters
+++ b/libfabric.vcxproj.filters
@@ -109,6 +109,30 @@
     <Filter Include="Source Files\prov\hook\perf\src">
       <UniqueIdentifier>{be316a01-6bff-4203-b070-ffaa66bb398e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\prov\verbs">
+      <UniqueIdentifier>{c211160d-dd28-45ee-bb7d-b3f76da2bb05}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\prov\verbs\include">
+      <UniqueIdentifier>{c8ccb98f-974c-4e6d-a9c0-6d85445ebcb1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\prov\verbs\src">
+      <UniqueIdentifier>{1ccf86f3-dbf1-44ee-8344-80b4e81c5b8c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\windows\asm">
+      <UniqueIdentifier>{3c879c0c-ec8e-4821-a98d-40e37383bd6c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\prov\verbs\src\windows">
+      <UniqueIdentifier>{738e5c36-f8f0-49d5-a612-16ca37c61e62}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\prov\verbs\include\windows">
+      <UniqueIdentifier>{834b7cd2-0aa9-4bb0-b670-01b2ad332f90}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\prov\verbs\include\windows\infiniband">
+      <UniqueIdentifier>{7418d8c7-3fcd-4acc-9f92-629d456acbd8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\prov\verbs\include\windows\rdma">
+      <UniqueIdentifier>{70e59847-274c-4040-9fd5-914fd75b8eae}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\common.c">
@@ -516,6 +540,69 @@
     <ClCompile Include="src\shared\ofi_str.c">
       <Filter>Source Files\src</Filter>
     </ClCompile>
+    <ClCompile Include="prov\sockets\src\sock_attr.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\hmem_ze.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="prov\verbs\src\fi_verbs.c">
+      <Filter>Source Files\prov\verbs\src</Filter>
+    </ClCompile>
+    <ClCompile Include="prov\verbs\src\verbs_cm.c">
+      <Filter>Source Files\prov\verbs\src</Filter>
+    </ClCompile>
+    <ClCompile Include="prov\verbs\src\verbs_cm_xrc.c">
+      <Filter>Source Files\prov\verbs\src</Filter>
+    </ClCompile>
+    <ClCompile Include="prov\verbs\src\verbs_cq.c">
+      <Filter>Source Files\prov\verbs\src</Filter>
+    </ClCompile>
+    <ClCompile Include="prov\verbs\src\verbs_dgram_av.c">
+      <Filter>Source Files\prov\verbs\src</Filter>
+    </ClCompile>
+    <ClCompile Include="prov\verbs\src\verbs_dgram_ep_msg.c">
+      <Filter>Source Files\prov\verbs\src</Filter>
+    </ClCompile>
+    <ClCompile Include="prov\verbs\src\verbs_domain.c">
+      <Filter>Source Files\prov\verbs\src</Filter>
+    </ClCompile>
+    <ClCompile Include="prov\verbs\src\verbs_domain_xrc.c">
+      <Filter>Source Files\prov\verbs\src</Filter>
+    </ClCompile>
+    <ClCompile Include="prov\verbs\src\verbs_ep.c">
+      <Filter>Source Files\prov\verbs\src</Filter>
+    </ClCompile>
+    <ClCompile Include="prov\verbs\src\verbs_eq.c">
+      <Filter>Source Files\prov\verbs\src</Filter>
+    </ClCompile>
+    <ClCompile Include="prov\verbs\src\verbs_info.c">
+      <Filter>Source Files\prov\verbs\src</Filter>
+    </ClCompile>
+    <ClCompile Include="prov\verbs\src\verbs_mr.c">
+      <Filter>Source Files\prov\verbs\src</Filter>
+    </ClCompile>
+    <ClCompile Include="prov\verbs\src\verbs_msg.c">
+      <Filter>Source Files\prov\verbs\src</Filter>
+    </ClCompile>
+    <ClCompile Include="prov\verbs\src\verbs_rma.c">
+      <Filter>Source Files\prov\verbs\src</Filter>
+    </ClCompile>
+    <ClCompile Include="prov\verbs\src\windows\addrinfo.c">
+      <Filter>Source Files\prov\verbs\src\windows</Filter>
+    </ClCompile>
+    <ClCompile Include="prov\verbs\src\windows\verbs_nd_ibv.c">
+      <Filter>Source Files\prov\verbs\src\windows</Filter>
+    </ClCompile>
+    <ClCompile Include="prov\verbs\src\windows\verbs_nd_rdma.c">
+      <Filter>Source Files\prov\verbs\src\windows</Filter>
+    </ClCompile>
+    <ClCompile Include="prov\verbs\src\windows\verbs_nd_ov.c">
+      <Filter>Source Files\prov\verbs\src\windows</Filter>
+    </ClCompile>
+    <ClCompile Include="prov\verbs\src\windows\verbs_nd_init.c">
+      <Filter>Source Files\prov\verbs\src\windows</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\fasthash.h">
@@ -759,6 +846,39 @@
       <Filter>Source Files\prov\hook\src</Filter>
     </ClInclude>
     <ClInclude Include="include\ofi_hook.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="prov\verbs\include\ofi_verbs_priv.h">
+      <Filter>Source Files\prov\verbs\include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\windows\asm\types.h">
+      <Filter>Header Files\windows\asm</Filter>
+    </ClInclude>
+    <ClInclude Include="prov\verbs\include\windows\infiniband\ib.h">
+      <Filter>Source Files\prov\verbs\include\windows\infiniband</Filter>
+    </ClInclude>
+    <ClInclude Include="prov\verbs\include\windows\infiniband\ib_user_ioctl_verbs.h">
+      <Filter>Source Files\prov\verbs\include\windows\infiniband</Filter>
+    </ClInclude>
+    <ClInclude Include="prov\verbs\include\windows\infiniband\verbs.h">
+      <Filter>Source Files\prov\verbs\include\windows\infiniband</Filter>
+    </ClInclude>
+    <ClInclude Include="prov\verbs\include\windows\infiniband\verbs_api.h">
+      <Filter>Source Files\prov\verbs\include\windows\infiniband</Filter>
+    </ClInclude>
+    <ClInclude Include="prov\verbs\include\windows\rdma\rdma_cma.h">
+      <Filter>Source Files\prov\verbs\include\windows\rdma</Filter>
+    </ClInclude>
+    <ClInclude Include="prov\verbs\include\fi_verbs.h">
+      <Filter>Source Files\prov\verbs\include</Filter>
+    </ClInclude>
+    <ClInclude Include="prov\verbs\include\windows\verbs_osd.h">
+      <Filter>Source Files\prov\verbs\include\windows</Filter>
+    </ClInclude>
+    <ClInclude Include="prov\verbs\include\windows\verbs_nd.h">
+      <Filter>Source Files\prov\verbs\include\windows</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ofi_epoll.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
