prov/linkx: add fabric initialization
Add the ability to iterate over all provider endpoints passed into
the fi_link() API and initialize the fabric for each. Store the
fid_fabric in a local linked list.

The core provider endpoint fid_fabric will be used whenever redirecting
function calls to the core provider.

Signed-off-by: Amir Shehata <shehataa@ornl.gov>

--- a/Makefile.am
+++ b/Makefile.am
@@ -440,6 +440,7 @@ include prov/opx/Makefile.include
 include prov/shm/Makefile.include
 include prov/tcp/Makefile.include
 include prov/rstream/Makefile.include
+include prov/linkx/Makefile.include
 include prov/hook/Makefile.include
 include prov/hook/perf/Makefile.include
 include prov/hook/hook_debug/Makefile.include
