prov/linkx: Initialize core domains
when fi_domain() is called on the LINKx provider, then go through
all the core providers which are being linked and initialize their
associated domains.

Similarly, when closing the domain, go over all the core providers'
domains and close them.

Signed-off-by: Amir Shehata <shehataa@ornl.gov>

--- a/Makefile.am
+++ b/Makefile.am
@@ -122,7 +122,8 @@ common_hook_srcs =				\
 	prov/hook/src/hook_xfer.c
 
 common_link_srcs =				\
-	prov/linkx/src/linkx_init.c
+	prov/linkx/src/linkx_init.c \
+	prov/linkx/src/linkx_domain.c
 
 # ensure dl-built providers link back to libfabric
 linkback = src/libfabric.la
