prov/linkx: endpoint initialization
Initialize the endpoints for all the core providers and store
them in the ep_fid in the local endpoint table.

When closing an endpoint, close all the core providers endpoints.

Lay the ground work for the endpoint operations. Most of these
operations will index into the LINKx peer table.

Signed-off-by: Amir Shehata <shehataa@ornl.gov>

--- a/Makefile.am
+++ b/Makefile.am
@@ -123,7 +123,9 @@ common_hook_srcs =				\
 
 common_link_srcs =				\
 	prov/linkx/src/linkx_init.c \
-	prov/linkx/src/linkx_domain.c
+	prov/linkx/src/linkx_domain.c \
+	prov/linkx/src/linkx_ep.c \
+	prov/linkx/src/linkx_ops.c
 
 # ensure dl-built providers link back to libfabric
 linkback = src/libfabric.la
