--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -34,7 +34,8 @@ _cxi_files = \
 	prov/cxi/src/cxip_faults.c \
 	prov/cxi/src/cxip_info.c \
 	prov/cxi/src/cxip_ctrl.c \
-	prov/cxi/src/cxip_req_buf.c
+	prov/cxi/src/cxip_req_buf.c \
+	prov/cxi/src/cxip_rdzv_pte.c
 
 _cxi_headers = \
 	prov/cxi/include/cxip.h \
