hmem: Introduce FI_HMEM_SYNAPSEAI API to libfabric
Add FI_HMEM_SYNAPSEAI in fi_hmem_iface to use SynapseAI API to support Habana Gaudi devices.
Add synapseai in fi_mr_attr.device as the device identifier for Gaudi hardware.
Add FI_HMEM_SYNAPSEAI to hmem_ops list with dummy api functions as placeholders. Some of them
may not be needed.

Signed-off-by: Shi Jin <sjina@amazon.com>

--- a/libfabric.vcxproj.filters
+++ b/libfabric.vcxproj.filters
@@ -150,6 +150,9 @@
     <ClCompile Include="src\hmem_neuron.c">
       <Filter>Source Files\src</Filter>
     </ClCompile>
+    <ClCompile Include="src\hmem_synapseai.c">
+      <Filter>Source Files\src</Filter>
+    </ClCompile>
     <ClCompile Include="src\rbtree.c">
       <Filter>Source Files\src</Filter>
     </ClCompile>
