appveyor: add a skip for appveyor to ignore changes not relevant to it
Signed-off-by: Zach Dworkin <zachary.dworkin@intel.com>

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -57,3 +57,10 @@ test_script:
   - set PATH=%CD%\x64\%CONFIGURATION%;%PATH%
   - set FI_PROVIDER=sockets
   - scripts\runfabtests.cmd
+
+skip_commits:
+  files:
+    - man/*
+    - prov/opx/*
+    - prov/psm.?/*
+    - contrib/*
