prov/efa: split efa_hmem.c/h from efa_domain.c
This patch did some refactor around hmem support status
checking

1. split 3 functions that check hmem support status from
   from efa_domain.c, and renamed the functions to
   efa_hmem_support_status_update_(cuda/neuron/all).

2. rename struct efa_hmem_info to efa_hmem_support_status,
   and move its definition to a new file efa_hmem.h

3. added the declaration of efa_hmem_support_status_update_all()
   to efa_hmem.h

4. let efa_domain.c call efa_hmem_support_status_update_all().

Signed-off-by: Wei Zhang <wzam@amazon.com>

--- a/libfabric.vcxproj
+++ b/libfabric.vcxproj
@@ -790,6 +790,7 @@
     <ClCompile Include="prov\efa\src\efa_av.c" />
     <ClCompile Include="prov\efa\src\efa_cm.c" />
     <ClCompile Include="prov\efa\src\efa_cq.c" />
+    <ClCompile Include="prov\efa\src\efa_hmem.c" />
     <ClCompile Include="prov\efa\src\efa_device.c" />
     <ClCompile Include="prov\efa\src\efa_domain.c" />
     <ClCompile Include="prov\efa\src\efa_ep.c" />
