prov/efa: split efa_mr.h from efa.h
split MR related definitions from efa.h to efa_mr.h

Also rename efa_ep_is_hmem/cuda/neuron_mr to
efa_mr_is_hmem/cuda/neuron to conform with naming convention

Signed-off-by: Wei Zhang <wzam@amazon.com>

--- a/prov/efa/Makefile.include
+++ b/prov/efa/Makefile.include
@@ -62,6 +62,7 @@ _efa_files = \
 
 _efa_headers = \
 	prov/efa/src/efa.h \
+	prov/efa/src/efa_mr.h \
 	prov/efa/src/efa_hmem.h \
 	prov/efa/src/efa_device.h \
 	prov/efa/src/efa_fork_support.h \
