prov/efa: split efa_fork_support.c from efa_domain.c and rxr_init.c
This patch move all the functions that implemented EFA's fork support
into efa_fork_support.c.

It also introduced efa_fork_support.h that has declaration of the
functions to use fork support.

It renamed the global variable efa_fork_status to g_efa_fork_status
to conform with the naming convention.

Signed-off-by: Wei Zhang <wzam@amazon.com>

--- a/libfabric.vcxproj
+++ b/libfabric.vcxproj
@@ -798,6 +798,7 @@
     <ClCompile Include="prov\efa\src\efa_mr.c" />
     <ClCompile Include="prov\efa\src\efa_msg.c" />
     <ClCompile Include="prov\efa\src\efa_rma.c" />
+    <ClCompile Include="prov\efa\src\efa_fork_support.c" />
     <ClCompile Include="prov\efa\src\rxr\rxr_pkt_type_base.c" />
     <ClCompile Include="prov\efa\src\windows\efawin.c" />
     <ClCompile Include="prov\efa\src\rxr\rxr_atomic.c" />
