--- a/prov/efa/Makefile.include
+++ b/prov/efa/Makefile.include
@@ -45,7 +45,6 @@ _efa_files = \
 	prov/efa/src/efa_fork_support.c \
 	prov/efa/src/rxr/rxr_attr.c	\
 	prov/efa/src/rxr/rxr_init.c	\
-	prov/efa/src/rxr/rxr_domain.c	\
 	prov/efa/src/rxr/rxr_cq.c	\
 	prov/efa/src/rxr/rxr_ep.c	\
 	prov/efa/src/rxr/rxr_cntr.c	\
@@ -65,6 +64,7 @@ _efa_headers = \
 	prov/efa/src/efa_mr.h \
 	prov/efa/src/efa_hmem.h \
 	prov/efa/src/efa_device.h \
+	prov/efa/src/efa_domain.h \
 	prov/efa/src/efa_fork_support.h \
 	prov/efa/src/rxr/rxr.h \
 	prov/efa/src/rxr/rxr_cntr.h \
