--- a/prov/efa/Makefile.include
+++ b/prov/efa/Makefile.include
@@ -44,7 +44,7 @@ _efa_files = \
 	prov/efa/src/efa_rma.c \
 	prov/efa/src/efa_prov_info.c \
 	prov/efa/src/efa_fork_support.c \
-	prov/efa/src/rxr/rxr_attr.c	\
+	prov/efa/src/rxr/rxr_prov.c	\
 	prov/efa/src/rxr/rxr_init.c	\
 	prov/efa/src/rxr/rxr_cq.c	\
 	prov/efa/src/rxr/rxr_ep.c	\
@@ -70,6 +70,7 @@ _efa_headers = \
 	prov/efa/src/efa_prov_info.h \
 	prov/efa/src/efa_fork_support.h \
 	prov/efa/src/rxr/rxr.h \
+	prov/efa/src/rxr/rxr_init.h \
 	prov/efa/src/rxr/rxr_cntr.h \
 	prov/efa/src/rxr/rxr_rma.h \
 	prov/efa/src/rxr/rxr_msg.h \
