[v1.15.x] fabtests/efa: Add efa fabric id test check
Signed-off-by: William Zhang <wilzhang@amazon.com>
(cherry picked from commit 8d885d3d1d3c85e8c9206402a1e805f003a9a80d)

--- a/fabtests/Makefile.am
+++ b/fabtests/Makefile.am
@@ -145,7 +145,8 @@ nobase_dist_config_DATA = \
 	pytest/efa/test_rma_bw.py \
 	pytest/efa/test_unexpected_msg.py \
 	pytest/efa/test_multi_recv.py \
-	pytest/efa/test_rnr.py
+	pytest/efa/test_rnr.py \
+	pytest/efa/test_efa_info.py
 
 noinst_LTLIBRARIES = libfabtests.la
 
