prov/cxi: Define env var FI_CXI_TELEMETRY
The enviroment variable FI_CXI_TELEMETRY is a comma separate string where
each entry is a telemetry file defined in
/sys/class/cxi/cxi*/device/telemetry/. When FI_CXI_TELEMETRY is set, a
telemetry delta will be performed on the user define counters across the
existence of the fi_domain. Since fi_domain maps to a specific interface
(e.g. cxi0), this essentially becomes a per interface telemetry delta.

The fi_domain was selected to have the telemetry delta performance since
applications typically will only open the domain during initialization
and close the domain during teardown. Thus, performing the delta using
this object should provide a reasonable telemetry delta corresponding to
the application's use of a given interface.

Since a typically job will have multiple processes using a single NIC,
if each process were to dump telemetry deltas, this can cause a lot of
additional noise. To help prevent this, FI_CXI_TELEMETRY_RGID can be
used to restrict telemetry data to a process with a given RGID.

NETCASSINI-3739

Signed-off-by: Ian Ziemba <ian.ziemba@hpe.com>

--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -35,7 +35,8 @@ _cxi_files = \
 	prov/cxi/src/cxip_info.c \
 	prov/cxi/src/cxip_ctrl.c \
 	prov/cxi/src/cxip_req_buf.c \
-	prov/cxi/src/cxip_rdzv_pte.c
+	prov/cxi/src/cxip_rdzv_pte.c \
+	prov/cxi/src/cxip_telemetry.c
 
 _cxi_headers = \
 	prov/cxi/include/cxip.h \
