--- a/Makefile.am
+++ b/Makefile.am
@@ -15,7 +15,7 @@ AM_CPPFLAGS = \
 
 noinst_LTLIBRARIES =
 lib_LTLIBRARIES =
-check_PROGRAMS =
+noinst_PROGRAMS =
 
 if EMBEDDED
 noinst_LTLIBRARIES += src/libfabric.la
